# tomsksoft

./: CMakeLists.txt  Dockerfile  README.md  Simple server.vpp  conanfile.txt
src/: client.cpp  create_packet.h  parse_config.h  server.cpp  server.h  session.h  writer.h
test/: CMakeLists.txt  mocks.cpp  mocks.h  test_functional.cpp  test_mocks.cpp  test_parse_config.cpp  test_session.cpp  test_uvw.cpp  test_writer.cpp
test/sml/: test_defer.cpp  test_session.cpp
